--- a/index.html/pharmacie_en_ligne2.htm
+++ b/index.html/pharmacie_en_ligne2.htm
@@ -35,7 +35,7 @@ function FP_getObjectByID(id,o) {//v1.0
 <table border="0" width="88%" style="font-family: Times New Roman; letter-spacing: normal; orphans: 2; text-transform: none; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial">
 	<tr>
 		<td width="246">
-		<img border="0" src="../../Documents/Mes%20sites%20Web/caduceus%20logo,health%20logo,medical%20logo1.png" width="141" height="145"></td>
+		<img border="0" src="caduceus%20logo,health%20logo,medical%20logo1.png" width="141" height="145"></td>
 		<td>
 		<p align="center"><b>
 		<font face="Vladimir Script" size="7" color="#33CC33">Pharmacie en ligne</font></b></td>
@@ -43,7 +43,7 @@ function FP_getObjectByID(id,o) {//v1.0
 </table>
 <p align="center"><img border="0" src="PROMO.png" width="849" height="319"></p>
 <p align="center">
-<img border="0" width="1006" height="29" src="../work2%20-%20Copie/les_meilleurs_ventes_fichiers/image001.gif" alt="     PROFITEZ DE CETTE FIN D ANNÉE AVEC CETTE PROMO SUR TOUT LES ARTICLES " v:shapes="_x0000_s1029"></p>
+<img border="0" width="1006" height="29" src="../work2%20-%20Copie/les_meilleurs_ventes_fichiers/image001.gif" alt="     PROFITEZ DE CETTE FIN D ANNÃ‰E AVEC CETTE PROMO SUR TOUT LES ARTICLES " v:shapes="_x0000_s1029"></p>
 <p align="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <img border="0" src="PROMOTION%2025.jpg" width="150" height="86"></p>
 <p>&nbsp;<a href="pharmacie_en_ligne.htm"><img border="0" id="img5" src="buttonE.jpg" height="20" width="100" alt="retour" fp-style="fp-btn: Corporate 9; fp-orig: 0" fp-title="retour" onmouseover="FP_swapImg(1,0,/*id*/'img5',/*url*/'buttonF.jpg')" onmouseout="FP_swapImg(0,0,/*id*/'img5',/*url*/'buttonE.jpg')" onmousedown="FP_swapImg(1,0,/*id*/'img5',/*url*/'button10.jpg')" onmouseup="FP_swapImg(0,0,/*id*/'img5',/*url*/'buttonF.jpg')"></a></p>
